--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Vue 测试实例</title>
-<script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
-</head>
-<body>
-<div id="app">
-  <p>{{ message }}</p>
-</div>
 
-<script>
-new Vue({
-  el: '#app',
-  data: {
-    message: 'Hello Vue.js!，本网站主要用于测试各种web框架及技术,包括nodejs、微信小程序、angularjs、vuejs、koa2、express等'
-  }
-})
-</script>
+<head>
+    <title>jianyq.top</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+
+    <div class="container mt-3" style="height:600px">
+        <h2>Flex</h2>
+        <p>使用 d-flex 类创建一个弹性盒子容器，并设置三个弹性子元素：</p>
+        <div class="d-flex p-3 bg-secondary text-white">
+            <div class="p-2 bg-info">Flex item 1</div>
+            <div class="p-2 bg-warning">Flex item 2</div>
+            <div class="p-2 bg-primary">Flex item 3</div>
+        </div>
+    </div>
+    <div style="position: absolute;bottom: 0;left: 50%; text-align: center;"><a style="color:rgb(143, 143, 140)" href="http://www.beian.miit.gov.cn" target="_blank">沪ICP备20014223号</a></div>
+
 </body>
+
 </html>
